--- a/gabrielavelasco-codedance-main/style.css
+++ b/gabrielavelasco-codedance-main/style.css
@@ -5,7 +5,7 @@
     
 }
 
-body::after, html::after, section::after {overflow:scroll;}
+/* body::after, html::after, section::after {overflow:scroll;} */
 
 body {
     font-size: 16px;
@@ -22,7 +22,8 @@ section {
     width: 100%;
     height: 100vh;
     position: relative;
-    overflow: hidden;
+    overflow: scroll;
+    
    
 }
 
@@ -267,14 +268,14 @@ p {
     opacity: 0;
 }
 
-.transition .bg, .bg1, .bg2, .bg3 {
+.transition .bg, .bg1, .bg2, .bg3, .bg4 {
     transition: background-position 1s ease;
     transition: width 1s ease;
 
     
 }
 
-.animate .bg, .bg1, .bg2, .bg3  {
+.animate .bg, .bg1, .bg2, .bg3, .bg4  {
     background-position: center;
     width: 50%;
     
@@ -456,3 +457,137 @@ p {
 
 
 /* slides w3schools ende*/
+
+
+@media screen and (max-width:1300px) {
+
+    .animate .text {
+        
+        vertical-align: middle;
+        
+        
+    }
+
+
+    .animate-completed, .inner, .text, .bg, .bg1, .bg2, .bg3, .bg4    {
+        background-position: center;
+        display:block;
+        align-items:center;
+        
+        
+    }
+
+
+
+.text {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    background: #fff;
+    overflow:scroll;
+    
+   
+    vertical-align: middle;
+  
+}
+
+.text .box {
+    padding: 4rem;
+    margin: 0 auto;
+    max-width: 1000px;
+    z-index: 1;
+    height:100%;
+    vertical-align: middle;
+    top:-25%;
+    transform: translateY(25%);
+    
+
+}
+
+h3 {
+    font-size: 4rem;
+    margin-bottom: 1.5rem;
+}
+
+p {
+    color: #555;
+    margin-bottom: 1rem;
+    text-align: justify;
+}
+
+.transition .mask {
+    transition: transform 1s ease, opacity 1s ease;
+}
+
+.animate .mask {
+    transform: scale(10);
+    opacity: 0;
+}
+
+.transition .bg, .bg1, .bg2, .bg3, .bg4 {
+    transition: background-position 1s ease;
+    transition: width 1s ease;
+
+    
+}
+
+.animate .bg, .bg1, .bg2, .bg3, .bg4  {
+    background-position: center;
+    width: 50%;
+    
+}
+
+.animate .bg {
+    background-position: center;
+    width: 100%;
+    
+}
+
+.animate .bg1 {
+    background-position: center;
+    width: 100%;
+    
+}
+
+.animate .bg2 {
+    background-position: center;
+    width: 100%;
+ 
+}
+
+.animate .bg3 {
+    background-position: center;
+    width: 100%;
+    
+}
+
+.animate .bg4 {
+    background-position: center;
+    width: 100%;
+    
+}
+
+.transition .text {
+    transition: left 1s ease;
+}
+
+.animate .text {
+    left: 0%;
+    vertical-align: middle;
+    
+    
+}
+
+.animate-completed .mask {
+    display: none;
+}
+
+    
+
+/* .inner:active { overflow:scroll;} */
+}
