--- a/gabrielavelasco-codedance-main/style.css
+++ b/gabrielavelasco-codedance-main/style.css
@@ -5,7 +5,7 @@
     
 }
 
-/* body::after, html::after, section::after {overflow:scroll;} */
+
 
 body {
     font-size: 16px;
@@ -14,7 +14,7 @@ body {
     min-height: 100vh;
     width: 100%;
     font-family: 'IBM Plex Serif', serif;
-    overflow:scroll;
+    overflow-y:scroll;
     z-index: 6000;
 }
 
@@ -22,7 +22,7 @@ section {
     width: 100%;
     height: 100vh;
     position: relative;
-    overflow: scroll;
+   
     
    
 }
@@ -170,42 +170,46 @@ button:hover {
 
 .l .bg {
     background-image: url(img/IMG_8450.JPG);
-    background-color: #060707;
+    background-color: #000000;
     
     
 }
 
 .k .bg {
     background-image: url(img/smaller_IMG_8494.jpg);
-    background-color:#060707;
+    background-color:#000000;
+    
     width: 100%;
     height: 100%;
 }
 
 .k .bg1 {
     background-image: url(img/smaller_jg237213_GabrielaVelasco.jpg);
-    background-color:#060707;
+    background-color:#000000;
+    
     width: 100%;
     height: 100%;
 }
 
 .k .bg2 {
     background-image: url(img/OOIG31BHXTUT9GiwuD4.png);
-    background-color:#060707;
-    width: 100%;
+    background-color:#000000;
+    
     height: 100%;
 }
 
 .k .bg3 {
     background-image: url(img/smaller_IMG_8389.jpg);
-    background-color:#060707;
+    background-color:#000000;
+    
     width: 100%;
     height: 100%;
 }
 
 .k .bg4 {
     background-image: url(img/901694_566386796726376_833546323_o_.jpg);
-    background-color:#060707;
+    background-color:#000000;
+    
     width: 100%;
     height: 100%;
 }
@@ -215,7 +219,8 @@ button:hover {
 
 .kl .bg {
     background-image: url(img/CG4A1312b-fotor-2024031323416.png);
-    background-color:#060707;
+    background-color:#000000;
+    
 }
 
 .text {
@@ -508,6 +513,7 @@ p {
 
 .animate .bg, .bg1, .bg2, .bg3, .bg4  {
     background-position: center;
+    background-size: cover;
     width: 50%;
     height:50%;
     
@@ -515,33 +521,45 @@ p {
 
 .animate .bg {
     background-position: center;
+    background-size: cover;
     width: 100%;
     height: 50%;
+    
     
     
 }
 
 .animate .bg1 {
     background-position: center;
+    background-size: cover;
     width: 100%;
+    top:-35%;
     
 }
 
 .animate .bg2 {
     background-position: center;
+    background-size: cover;
     width: 100%;
+    
  
 }
 
 .animate .bg3 {
     background-position: center;
+    background-size: cover;
     width: 100%;
+    top:-15%;
+    
     
 }
 
 .animate .bg4 {
     background-position: center;
+    background-size: cover;
     width: 100%;
+    top:-15%;
+    
     
 }
 
@@ -597,5 +615,5 @@ p {
 
     
 
-/* .inner:active { overflow:scroll;} */
+
 }
