--- a/style.css
+++ b/style.css
@@ -105,6 +105,9 @@ button:hover {
     width: 100%;
     height: 100%;
     z-index: 2;
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
     
 }
 
@@ -233,9 +236,6 @@ button:hover {
     display: flex;
     align-items: center;
     background: #fff;
-    overflow:scroll;
-    
-   
     vertical-align: middle;
   
 }
@@ -249,7 +249,9 @@ button:hover {
     vertical-align: middle;
     top:-25%;
     transform: translateY(25%);
-    
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
 
 }
 
@@ -324,20 +326,7 @@ p {
     height: 100%;
 } */
 
-.transition .text {
-    transition: left 1s ease;
-}
 
-.animate .text {
-    left: 50%;
-    vertical-align: middle;
-    
-    
-}
-
-.animate-completed .mask {
-    display: none;
-}
 
 
 /* slides */
@@ -466,18 +455,14 @@ p {
 
 @media screen and (max-width:1300px) {
 
-    .animate .text {
-        
-        vertical-align: middle;
-        
-        
-    }
-
 
     .animate-completed, .inner, .text, .bg, .bg1, .bg2, .bg3, .bg4    {
         background-position: center;
         display:block;
         align-items:center;
+        -ms-overflow-style: none; /* for Internet Explorer, Edge */
+        scrollbar-width: none; /* for Firefox */
+        overflow-y: scroll; 
         
         
     }
@@ -591,7 +576,9 @@ p {
     vertical-align: middle;
     top:-25%;
     transform: translateY(25%);
-    
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll; 
 
 }
 
@@ -603,8 +590,9 @@ p {
 .animate .text {
     top: 50%;
     left:0;
-    bottom:60%;
+    bottom:70%;
     vertical-align: middle;
+    
     
     
 }
@@ -613,7 +601,6 @@ p {
     display: none;
 }
 
-    
-
 
 }
+
