--- a/style.css
+++ b/style.css
@@ -2,10 +2,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
+    font-family: 'IBM Plex Serif', serif;
 }
-
-
 
 body {
     font-size: 16px;
@@ -14,16 +12,14 @@ body {
     min-height: 100vh;
     width: 100%;
     font-family: 'IBM Plex Serif', serif;
-    overflow-y:scroll;
-    z-index: 6000;
+    overflow:scroll;
 }
 
 section {
     width: 100%;
     height: 100vh;
     position: relative;
-   
-    
+    overflow: hidden;
    
 }
 
@@ -170,46 +166,42 @@ button:hover {
 
 .l .bg {
     background-image: url(img/IMG_8450.JPG);
-    background-color: #000000;
+    background-color: #060707;
     
     
 }
 
 .k .bg {
     background-image: url(img/smaller_IMG_8494.jpg);
-    background-color:#000000;
-    
+    background-color:#060707;
     width: 100%;
     height: 100%;
 }
 
 .k .bg1 {
     background-image: url(img/smaller_jg237213_GabrielaVelasco.jpg);
-    background-color:#000000;
-    
+    background-color:#060707;
     width: 100%;
     height: 100%;
 }
 
 .k .bg2 {
-    background-image: url(img/OOIG31BHXTUT9GiwuD4.png);
-    background-color:#000000;
-    
+    background-image: url(img/danceAI.jpg);
+    background-color:#060707;
+    width: 100%;
     height: 100%;
 }
 
 .k .bg3 {
     background-image: url(img/smaller_IMG_8389.jpg);
-    background-color:#000000;
-    
+    background-color:#060707;
     width: 100%;
     height: 100%;
 }
 
 .k .bg4 {
-    background-image: url(img/901694_566386796726376_833546323_o_.jpg);
-    background-color:#000000;
-    
+    background-image: url(img/solidaoaflordapele2.jpg);
+    background-color:#060707;
     width: 100%;
     height: 100%;
 }
@@ -219,8 +211,7 @@ button:hover {
 
 .kl .bg {
     background-image: url(img/CG4A1312b-fotor-2024031323416.png);
-    background-color:#000000;
-    
+    background-color:#060707;
 }
 
 .text {
@@ -273,14 +264,14 @@ p {
     opacity: 0;
 }
 
-.transition .bg, .bg1, .bg2, .bg3, .bg4 {
+.transition .bg, .bg1, .bg2, .bg3 {
     transition: background-position 1s ease;
     transition: width 1s ease;
 
     
 }
 
-.animate .bg, .bg1, .bg2, .bg3, .bg4  {
+.animate .bg, .bg1, .bg2, .bg3  {
     background-position: center;
     width: 50%;
     
@@ -387,31 +378,33 @@ p {
 
 /* Next & previous buttons */
 .prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: rgb(181, 159, 159);
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-  z-index: 4;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(205, 84, 84, 0.8);
-}
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: rgb(15, 14, 14);
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 50%;
+    user-select: none;
+    z-index: 4;
+    background-color: #10283a46;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 50%;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: #10283A;
+    color: white;
+  }
 
 /* Caption text */
 /* .text {
@@ -462,158 +455,3 @@ p {
 
 
 /* slides w3schools ende*/
-
-
-@media screen and (max-width:1300px) {
-
-    .animate .text {
-        
-        vertical-align: middle;
-        
-        
-    }
-
-
-    .animate-completed, .inner, .text, .bg, .bg1, .bg2, .bg3, .bg4    {
-        background-position: center;
-        display:block;
-        align-items:center;
-        
-        
-    }
-
-
-
-h3 {
-    font-size: 4rem;
-    margin-bottom: 1.5rem;
-}
-
-p {
-    color: #555;
-    margin-bottom: 1rem;
-    text-align: justify;
-}
-
-.transition .mask {
-    transition: transform 1s ease, opacity 1s ease;
-}
-
-.animate .mask {
-    transform: scale(10);
-    opacity: 0;
-}
-
-.transition .bg, .bg1, .bg2, .bg3, .bg4 {
-    transition: background-position 1s ease;
-    transition: width 1s ease;
-
-    
-}
-
-.animate .bg, .bg1, .bg2, .bg3, .bg4  {
-    background-position: center;
-    background-size: cover;
-    width: 50%;
-    height:50%;
-    
-}
-
-.animate .bg {
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    height: 50%;
-    
-    
-    
-}
-
-.animate .bg1 {
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    top:-35%;
-    
-}
-
-.animate .bg2 {
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    
- 
-}
-
-.animate .bg3 {
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    top:-15%;
-    
-    
-}
-
-.animate .bg4 {
-    background-position: center;
-    background-size: cover;
-    width: 100%;
-    top:-15%;
-    
-    
-}
-
-
-
-.text {
-    position: absolute;
-    bottom: 100%;
-    top: 0;
-    width: 100%;
-    height: 50%;
-    z-index: 1;
-    display: flex;
-    align-items: center;
-    background: #fff;
-    overflow:scroll;
-    
-   
-    vertical-align: middle;
-  
-}
-
-.text .box {
-    padding: 4rem;
-    margin: 0 auto;
-    max-width: 1000px;
-    z-index: 1;
-    height:100%;
-    vertical-align: middle;
-    top:-25%;
-    transform: translateY(25%);
-    
-
-}
-
-
-.transition .text {
-    transition: top 1s ease;
-}
-
-.animate .text {
-    top: 50%;
-    left:0;
-    bottom:60%;
-    vertical-align: middle;
-    
-    
-}
-
-.animate-completed .mask {
-    display: none;
-}
-
-    
-
-
-}
